testdata/baselines/reference/submodule/compiler/jsdocTypedef_propertyWithNoType.errors.txt
/a.js(6,12): error TS2304: Cannot find name 'Foo'.


==== /a.js (1 errors) ====
    /**
     * @typedef Foo
     * @property foo
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    const x = { foo: 0 };
    